Cambio rutas imagenes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="contenedor">
         <div class="contenedor-imagen-fondo">
           <nav>
-            <img src="../images/logo.svg" alt="logo" />
+            <img src="images/logo.svg" alt="logo" />
             <div class="hamburger-menu">
               <div class="bar"></div>
               <div class="bar"></div>
@@ -111,7 +111,7 @@
       <div class="contendor-footer">
         <div class="cont-izq-footer">
           <figure>
-            <img src="../images/logo.svg" alt />
+            <img src="images/logo.svg" alt />
           </figure>
           <ul class="listado-op">
             <li>
@@ -143,10 +143,10 @@
         </div>
         <div class="cont-der-footer">
           <div class="logos-redes">
-            <img src="../images/icon-facebook.svg" alt />
-            <img src="../images/icon-twitter.svg" alt />
-            <img src="../images/icon-pinterest.svg" alt />
-            <img src="../images/icon-instagram.svg" alt />
+            <img src="images/icon-facebook.svg" alt />
+            <img src="images/icon-twitter.svg" alt />
+            <img src="images/icon-pinterest.svg" alt />
+            <img src="images/icon-instagram.svg" alt />
           </div>
           <div class="copyright">
             <p>© 2021 Loopstudios. All rights reserved.</p>
