--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="images/logo.svg" />
   <meta name="description" content="Loopstudios VR Experiences" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 </head>
 
@@ -15,28 +16,33 @@
   <section>
     <div class="contenedor">
       <div class="contenedor-imagen-fondo">
-        <nav>
+        <nav class="menu-navegador">
           <img src="images/logo.svg" alt="logo" />
-          <div class="hamburger-menu">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
-          <ul class="nav-links">
-            <li>
-              <a href="#" target="_blank" rel="noopener noreferrer">About</a>
+
+          <label class="labe-hamburguesa" for="menu-hamburguesa">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-list"
+              viewBox="0 0 16 16" class="list-icon">
+              <path fill-rule="evenodd"
+                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+            </svg>
+          </label>
+          <input type="checkbox" name="" class="menu-hamburguesa" id="menu-hamburguesa">
+
+          <ul class="nav-links" id="menu">
+            <li class="li-links">
+              <a href="#" target="_blank" rel="noopener noreferrer" class="links">About</a>
             </li>
-            <li>
-              <a href="#" target="_blank" rel="noopener noreferrer">Careers</a>
+            <li class="li-links">
+              <a href="#" target="_blank" rel="noopener noreferrer" class="links">Careers</a>
             </li>
-            <li>
-              <a href="#" target="_blank" rel="noopener noreferrer">Events</a>
+            <li class=" li-links">
+                <a href="#" target="_blank" rel="noopener noreferrer" class="links">Events</a>
             </li>
-            <li>
-              <a href="#" target="_blank" rel="noopener noreferrer">Products</a>
+            <li class=" li-links">
+                  <a href="#" target="_blank" rel="noopener noreferrer" class="links">Products</a>
             </li>
-            <li>
-              <a href="#" target="_blank" rel="noopener noreferrer">Support</a>
+            <li class=" li-links">
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="links">Support</a>
             </li>
           </ul>
         </nav>
@@ -73,35 +79,35 @@
 
       <div class="cont-cards">
         <article class="card">
-          <h3>DEEP EARTH</h3>
+          <h3>DEEP</br>EARTH</h3>
         </article>
 
         <article class="card">
-          <h3>NIGHT ARCADE</h3>
+          <h3>NIGHT</br>ARCADE</h3>
         </article>
 
         <article class="card">
-          <h3>SOCCER TEAM VR</h3>
+          <h3>SOCCER</br>TEAM VR</h3>
         </article>
 
         <article class="card">
-          <h3>THE GRID</h3>
+          <h3>THE</br>GRID</h3>
         </article>
 
         <article class="card">
-          <h3>FROM UP ABOVE VR</h3>
+          <h3>FROM UP</br>ABOVE VR</h3>
         </article>
 
         <article class="card">
-          <h3>POCKET BOREALIS</h3>
+          <h3>POCKET</br>BOREALIS</h3>
         </article>
 
         <article class="card">
-          <h3>THE CURIOSITY</h3>
+          <h3>THE</br>CURIOSITY</h3>
         </article>
 
         <article class="card">
-          <h3>MAKE IT FISHEYE</h3>
+          <h3>MAKE IT</br>FISHEYE</h3>
         </article>
       </div>
     </div>
