--- a/index.html
+++ b/index.html
@@ -1,163 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="nuevo.css.css" />
+  </head>
+  <body>
+    <section>
+      <div class="contenedor">
+        <div class="contenedor-imagen-fondo">
+          <nav>
+            <img src="../images/logo.svg" alt="logo" />
+            <div class="hamburger-menu">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </div>
+            <div class="close-menu">X</div>
+            <ul class="nav-links">
+              <li>
+                <a href="#" target="_blank" rel="noopener noreferrer">About</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  >Careers</a
+                >
+              </li>
+              <li>
+                <a href="#" target="_blank" rel="noopener noreferrer">Events</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  >Products</a
+                >
+              </li>
+              <li>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  >Support</a
+                >
+              </li>
+            </ul>
+          </nav>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/logo.svg" />
-  <meta name="description" content="Loopstudios VR Experiences" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+          <div class="contenedor-texto-tit">
+            <h1 class="titulo-banner">IMMERSIVE EXPERIENCES THAT DELIVER</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="contenedor-seccion-informativa">
+        <div class="cont-background-imagen"></div>
 
-</head>
+        <div class="cont-texto-informativo">
+          <h2>THE LEADER IN INTERACTIVE VR</h2>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around thee globe,
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="contenedor-seccion-cards">
+        <div class="cont-titulo-boton">
+          <h2>OUR CREATIONS</h2>
+          <div class="boton-ver-mas-card-desk">
+            <a href="#" target="_blank" rel="noopener noreferrer">SEE ALL</a>
+          </div>
+        </div>
+  
+        <div class="cont-cards">
+          <div class="card">
+            <h3>DEEP</br>EARTH</h3>
+          </div>
 
-<body>
-  <section>
-    <div class="contenedor">
-      <div class="contenedor-imagen-fondo">
-        <nav class="menu-navegador">
-          <img src="images/logo.svg" alt="logo" />
+          <div class="card">
+            <h3>NIGHT</br>ARCADE</h3>
+          </div>
 
-          <label class="labe-hamburguesa" for="menu-hamburguesa">
-            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-list"
-              viewBox="0 0 16 16" class="list-icon">
-              <path fill-rule="evenodd"
-                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
-            </svg>
-          </label>
-          <input type="checkbox" name="" class="menu-hamburguesa" id="menu-hamburguesa">
+          <div class="card">
+            <h3>SOCCER</br>TEAM VR</h3>
+          </div>
 
-          <ul class="nav-links" id="menu">
-            <li class="li-links">
-              <a href="#" target="_blank" rel="noopener noreferrer" class="links">About</a>
+          <div class="card">
+            <h3>THE</br>GRID</h3>
+          </div>
+
+          <div class="card">
+            <h3>FROM UP</br>ABOVE VR</h3>
+          </div>
+
+          <div class="card">
+            <h3>POCKET</br>BOREALIS</h3>
+          </div>
+
+          <div class="card">
+            <h3>THE</br>CURIOSITY</h3>
+          </div>
+
+          <div class="card">
+            <h3>MAKE IT</br>FISHEYE</h3>
+          </div>
+        </div>
+         <div class="boton-ver-mas-card-mobile">
+            <a href="#" target="_blank" rel="noopener noreferrer">SEE ALL</a>
+          </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="contendor-footer">
+        <div class="cont-izq-footer">
+          <figure>
+            <img src="../images/logo.svg" alt />
+          </figure>
+          <ul class="listado-op">
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >About</a
+              >
             </li>
-            <li class="li-links">
-              <a href="#" target="_blank" rel="noopener noreferrer" class="links">Careers</a>
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >Careers</a
+              >
             </li>
-            <li class=" li-links">
-                <a href="#" target="_blank" rel="noopener noreferrer" class="links">Events</a>
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >Events</a
+              >
             </li>
-            <li class=" li-links">
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="links">Products</a>
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >Products</a
+              >
             </li>
-            <li class=" li-links">
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="links">Support</a>
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >Support</a
+              >
             </li>
           </ul>
-        </nav>
-
-        <div class="contenedor-texto-tit">
-          <h1 class="titulo-banner">IMMERSIVE EXPERIENCES THAT DELIVER</h1>
+          
+        </div>
+        <div class="cont-der-footer">
+          <div class="logos-redes">
+            <img src="../images/icon-facebook.svg" alt />
+            <img src="../images/icon-twitter.svg" alt />
+            <img src="../images/icon-pinterest.svg" alt />
+            <img src="../images/icon-instagram.svg" alt />
+          </div>
+          <div class="copyright">
+            <p>© 2021 Loopstudios. All rights reserved.</p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section>
-    <div class="contenedor-seccion-informativa">
-      <div class="cont-background-imagen"></div>
+    </footer>
 
-      <div class="cont-texto-informativo">
-        <h2>THE LEADER IN INTERACTIVE VR</h2>
-        <p>
-          Founded in 2011, Loopstudios has been producing world-class virtual
-          reality projects for some of the best companies around the globe,
-          Our award-winning creations have transformed businesses through
-          digital experiences that bind to their brand.
-        </p>
-      </div>
-    </div>
-  </section>
-  <section>
-    <div class="contenedor-seccion-cards">
-      <div class="cont-titulo-boton">
-        <h2>OUR CREATIONS</h2>
-        <div class="boton-ver-mas-card">
-          <a href="#" target="_blank" rel="noopener noreferrer">SEE ALL</a>
-        </div>
-      </div>
-
-      <div class="cont-cards">
-        <article class="card">
-          <h3>DEEP</br>EARTH</h3>
-        </article>
-
-        <article class="card">
-          <h3>NIGHT</br>ARCADE</h3>
-        </article>
-
-        <article class="card">
-          <h3>SOCCER</br>TEAM VR</h3>
-        </article>
-
-        <article class="card">
-          <h3>THE</br>GRID</h3>
-        </article>
-
-        <article class="card">
-          <h3>FROM UP</br>ABOVE VR</h3>
-        </article>
-
-        <article class="card">
-          <h3>POCKET</br>BOREALIS</h3>
-        </article>
-
-        <article class="card">
-          <h3>THE</br>CURIOSITY</h3>
-        </article>
-
-        <article class="card">
-          <h3>MAKE IT</br>FISHEYE</h3>
-        </article>
-      </div>
-    </div>
-  </section>
-  <footer class="footer">
-    <div class="contendor-footer">
-      <div class="cont-izq-footer">
-        <figure> <img src="images/logo.svg" alt="logo" /></figure>
-        <ul class="listado-op">
-          <li>
-            <a href="http://" target="_blank" rel="noopener noreferrer">About</a>
-          </li>
-          <li>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Careers</a>
-          </li>
-          <li>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Events</a>
-          </li>
-          <li>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Products</a>
-          </li>
-          <li>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Support</a>
-          </li>
-        </ul>
-      </div>
-      <div class="cont-der-footer">
-        <div class="logos-redes">
-          <a href="#" aria-label="Facebook"><img src="images/icon-facebook.svg" alt="facebook" /></a>
-          <a href="#" aria-label="Twitter"><img src="images/icon-twitter.svg" alt="twitter" /></a>
-          <a href="#" aria-label="Pinterest"><img src="images/icon-pinterest.svg" alt="pinterest" /></a>
-          <a href="#" aria-label="Instagram"> <img src="images/icon-instagram.svg" alt="instagram" /></a>
-        </div>
-        <div class="copyright">
-          <p>© 2021 Loopstudios. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <script>
-    const hamburgerMenu = document.querySelector(".hamburger-menu");
-    const navLinks = document.querySelector(".nav-links");
-    document.addEventListener("DOMContentLoaded", function () {
-      hamburgerMenu.addEventListener("click", () => {
-        navLinks.classList.toggle("active");
-        hamburgerMenu.classList.toggle("active");
+    <script>
+      const hamburgerMenu = document.querySelector(".hamburger-menu");
+      const navLinks = document.querySelector(".nav-links");
+      const closeMenu = document.querySelector(".close-menu");
+      document.addEventListener("DOMContentLoaded", function () {
+        hamburgerMenu.addEventListener("click", () => {
+          navLinks.classList.add("active");
+          hamburgerMenu.classList.add("active");
+          closeMenu.style.display = "block";
+        });
+        closeMenu.addEventListener("click", () => {
+          navLinks.classList.remove("active");
+          hamburgerMenu.classList.remove("active");
+          closeMenu.style.display = "none";
+        });
       });
-    });
-  </script>
-</body>
-
+    </script>
+  </body>
 </html>
