--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
       <div class="contenedor">
         <div class="contenedor-imagen-fondo">
           <nav>
-            <img src="../images/logo.svg" alt="logo" />
+            <img src="../images/logo.svg" alt="logo" class="logo-loopstudio"/>
             <div class="hamburger-menu">
               <div class="bar"></div>
               <div class="bar"></div>
               <div class="bar"></div>
             </div>
-            <div class="close-menu">X</div>
+            <div class="close-menu"></div>
             <ul class="nav-links">
-              <li>
+              <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer">About</a>
               </li>
-              <li>
+              <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer"
                   >Careers</a
                 >
               </li>
-              <li>
+              <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer">Events</a>
               </li>
-              <li>
+              <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer"
                   >Products</a
                 >
               </li>
-              <li>
+              <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer"
                   >Support</a
                 >
