--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="contenedor">
         <div class="contenedor-imagen-fondo">
           <nav>
-            <img src="../images/logo.svg" alt="logo" class="logo-loopstudio"/>
+            <img src="images/logo.svg" alt="logo" class="logo-loopstudio"/>
             <div class="hamburger-menu">
               <div class="bar"></div>
               <div class="bar"></div>
@@ -148,10 +148,10 @@
         </div>
         <div class="cont-der-footer">
           <div class="logos-redes">
-            <img src="../images/icon-facebook.svg" alt />
-            <img src="../images/icon-twitter.svg" alt />
-            <img src="../images/icon-pinterest.svg" alt />
-            <img src="../images/icon-instagram.svg" alt />
+            <img src="images/icon-facebook.svg" alt />
+            <img src="images/icon-twitter.svg" alt />
+            <img src="images/icon-pinterest.svg" alt />
+            <img src="images/icon-instagram.svg" alt />
           </div>
           <div class="copyright">
             <p>© 2021 Loopstudios. All rights reserved.</p>
