--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="contendor-footer">
         <div class="cont-izq-footer">
           <figure>
-            <img src="../images/logo.svg" alt />
+            <img src="images/logo.svg" alt />
           </figure>
           <ul class="listado-op">
             <li>
