--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="contenedor">
         <div class="contenedor-imagen-fondo">
           <nav>
-            <img src="images/logo.svg" alt="logo" class="logo-loopstudio"/>
+            <figure>
+              <img src="images/logo.svg" alt="Logo de Loopstudios" class="logo-loopstudio"/>
+            </figure>
             <div class="hamburger-menu">
               <div class="bar"></div>
               <div class="bar"></div>
@@ -23,22 +25,16 @@
                 <a href="#" target="_blank" rel="noopener noreferrer">About</a>
               </li>
               <li class="li-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  >Careers</a
-                >
+                <a href="#" target="_blank" rel="noopener noreferrer">Careers</a>
               </li>
               <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer">Events</a>
               </li>
               <li class="li-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  >Products</a
-                >
+                <a href="#" target="_blank" rel="noopener noreferrer">Products</a>
               </li>
               <li class="li-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  >Support</a
-                >
+                <a href="#" target="_blank" rel="noopener noreferrer">Support</a>
               </li>
             </ul>
           </nav>
@@ -49,6 +45,7 @@
         </div>
       </div>
     </section>
+
     <section>
       <div class="contenedor-seccion-informativa">
         <div class="cont-background-imagen"></div>
@@ -57,13 +54,14 @@
           <h2>THE LEADER IN INTERACTIVE VR</h2>
           <p>
             Founded in 2011, Loopstudios has been producing world-class virtual
-            reality projects for some of the best companies around thee globe,
+            reality projects for some of the best companies around the globe.
             Our award-winning creations have transformed businesses through
             digital experiences that bind to their brand.
           </p>
         </div>
       </div>
     </section>
+
     <section>
       <div class="contenedor-seccion-cards">
         <div class="cont-titulo-boton">
@@ -72,86 +70,68 @@
             <a href="#" target="_blank" rel="noopener noreferrer">SEE ALL</a>
           </div>
         </div>
-  
+
         <div class="cont-cards">
-          <div class="card">
-            <h3>DEEP</br>EARTH</h3>
-          </div>
+          <article class="card">
+            <h3>DEEP<br>EARTH</h3>
+          </article>
 
-          <div class="card">
-            <h3>NIGHT</br>ARCADE</h3>
-          </div>
+          <article class="card">
+            <h3>NIGHT<br>ARCADE</h3>
+          </article>
 
-          <div class="card">
-            <h3>SOCCER</br>TEAM VR</h3>
-          </div>
+          <article class="card">
+            <h3>SOCCER<br>TEAM VR</h3>
+          </article>
 
-          <div class="card">
-            <h3>THE</br>GRID</h3>
-          </div>
+          <article class="card">
+            <h3>THE<br>GRID</h3>
+          </article>
 
-          <div class="card">
-            <h3>FROM UP</br>ABOVE VR</h3>
-          </div>
+          <article class="card">
+            <h3>FROM UP<br>ABOVE VR</h3>
+          </article>
 
-          <div class="card">
-            <h3>POCKET</br>BOREALIS</h3>
-          </div>
+          <article class="card">
+            <h3>POCKET<br>BOREALIS</h3>
+          </article>
 
-          <div class="card">
-            <h3>THE</br>CURIOSITY</h3>
-          </div>
+          <article class="card">
+            <h3>THE<br>CURIOSITY</h3>
+          </article>
 
-          <div class="card">
-            <h3>MAKE IT</br>FISHEYE</h3>
-          </div>
+          <article class="card">
+            <h3>MAKE IT<br>FISHEYE</h3>
+          </article>
         </div>
-         <div class="boton-ver-mas-card-mobile">
-            <a href="#" target="_blank" rel="noopener noreferrer">SEE ALL</a>
-          </div>
+
+        <div class="boton-ver-mas-card-mobile">
+          <a href="#" target="_blank" rel="noopener noreferrer">SEE ALL</a>
+        </div>
       </div>
     </section>
+
     <footer class="footer">
       <div class="contendor-footer">
         <div class="cont-izq-footer">
           <figure>
-            <img src="images/logo.svg" alt />
+            <img src="images/logo.svg" alt="Logo de Loopstudios" />
           </figure>
           <ul class="listado-op">
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >About</a
-              >
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >Careers</a
-              >
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >Events</a
-              >
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >Products</a
-              >
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >Support</a
-              >
-            </li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">About</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Careers</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Events</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Products</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Support</a></li>
           </ul>
-          
         </div>
+
         <div class="cont-der-footer">
           <div class="logos-redes">
-            <img src="images/icon-facebook.svg" alt />
-            <img src="images/icon-twitter.svg" alt />
-            <img src="images/icon-pinterest.svg" alt />
-            <img src="images/icon-instagram.svg" alt />
+            <figure><img src="images/icon-facebook.svg" alt="Facebook" /></figure>
+            <figure><img src="images/icon-twitter.svg" alt="Twitter" /></figure>
+            <figure><img src="images/icon-pinterest.svg" alt="Pinterest" /></figure>
+            <figure><img src="images/icon-instagram.svg" alt="Instagram" /></figure>
           </div>
           <div class="copyright">
             <p>© 2021 Loopstudios. All rights reserved.</p>
@@ -164,12 +144,14 @@
       const menuHamburguesa = document.querySelector(".hamburger-menu");
       const navLinks = document.querySelector(".nav-links");
       const cerrarMenu = document.querySelector(".close-menu");
+
       document.addEventListener("DOMContentLoaded", function () {
         menuHamburguesa.addEventListener("click", () => {
           navLinks.classList.add("active");
           menuHamburguesa.classList.add("active");
           cerrarMenu.style.display = "block";
         });
+
         cerrarMenu.addEventListener("click", () => {
           navLinks.classList.remove("active");
           menuHamburguesa.classList.remove("active");
