--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <ul class="nav-links">
               <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer">About</a>
+                
               </li>
               <li class="li-links">
                 <a href="#" target="_blank" rel="noopener noreferrer">Careers</a>
@@ -118,20 +119,20 @@
             <img src="images/logo.svg" alt="Logo de Loopstudios" />
           </figure>
           <ul class="listado-op">
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">About</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Careers</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Events</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Products</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Support</a></li>
+            <li class="li-links-footer"><a href="http://" target="_blank" rel="noopener noreferrer">About</a></li>
+            <li class="li-links-footer"><a href="http://" target="_blank" rel="noopener noreferrer">Careers</a></li>
+            <li class="li-links-footer"><a href="http://" target="_blank" rel="noopener noreferrer">Events</a></li>
+            <li class="li-links-footer"><a href="http://" target="_blank" rel="noopener noreferrer">Products</a></li>
+            <li class="li-links-footer"><a href="http://" target="_blank" rel="noopener noreferrer">Support</a></li>
           </ul>
         </div>
 
         <div class="cont-der-footer">
           <div class="logos-redes">
-            <figure><img src="images/icon-facebook.svg" alt="Facebook" /></figure>
-            <figure><img src="images/icon-twitter.svg" alt="Twitter" /></figure>
-            <figure><img src="images/icon-pinterest.svg" alt="Pinterest" /></figure>
-            <figure><img src="images/icon-instagram.svg" alt="Instagram" /></figure>
+            <a class="link-redes-sociales"><img src="images/icon-facebook.svg" alt="Facebook" /></a>
+            <a class="link-redes-sociales"><img src="images/icon-twitter.svg" alt="Twitter" /></a>
+            <a class="link-redes-sociales"><img src="images/icon-pinterest.svg" alt="Pinterest" /></a>
+            <a class="link-redes-sociales"><img src="images/icon-instagram.svg" alt="Instagram" /></a>
           </div>
           <div class="copyright">
             <p>© 2021 Loopstudios. All rights reserved.</p>
@@ -141,10 +142,12 @@
     </footer>
 
     <script>
+      //Capturo todos los elementos que necesito
       const menuHamburguesa = document.querySelector(".hamburger-menu");
       const navLinks = document.querySelector(".nav-links");
       const cerrarMenu = document.querySelector(".close-menu");
 
+      // se crea una funcion que escuche el click en menu hamburguesa y le añada clases de activo a los elementos capturados
       document.addEventListener("DOMContentLoaded", function () {
         menuHamburguesa.addEventListener("click", () => {
           navLinks.classList.add("active");
